--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "5.2.0",
+    "typescript": "^5.1.1",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
