--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [test, lint, build]
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout Repository
@@ -73,6 +73,9 @@ jobs:
 
       - name: Install Dependencies
         run: yarn --frozen-lockfile
+
+      - name: Build
+        run: yarn build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
