--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    name: Test
 
     steps:
       - name: Checkout Repository
@@ -23,6 +24,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    name: Lint
 
     steps:
       - name: Checkout Repository
@@ -39,29 +41,11 @@ jobs:
       - name: Lint
         run: yarn lint
 
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     needs: [test, lint]
+    name: Build and Deploy
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: "20"
-
-      - name: Install Dependencies
-        run: yarn --frozen-lockfile
-
-      - name: Build
-        run: yarn build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [test, lint, build]
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -79,6 +63,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
